src/styles/blogs.css
/* generate HTML tag CSS */

.blog h1, .blog h2, .blog h3, .blog h4, .blog h5, .blog h6, .blog p {
  margin-bottom: 1rem;
}

/* Style the main heading */
.blog h1 {
  font-size: 2rem; /* 32px */
  line-height: 2.25rem; /* 36px */
  font-weight: 600;
}

/* Style subheadings */
.blog h2 {
  font-size: 1.5rem; /* 24px */
  line-height: 1.875rem; /* 30px */
  font-weight: 600;
}

/* Style h3 */
.blog h3 {
  font-size: 1.25rem; /* 20px */
  line-height: 1.5rem; /* 24px */
  font-weight: 600;
}

/* Style h4 */
.blog h4 {
  font-size: 1.125rem; /* 18px */
  line-height: 1.375rem; /* 22px */
  font-weight: 600;
}

/* Style h5 */
.blog h5 {
  font-size: 1rem; /* 16px */
  line-height: 1.25rem; /* 20px */
  font-weight: 600;
}

/* Style h6 */
.blog h6 {
  font-size: 0.875rem; /* 14px */
  line-height: 1.125rem; /* 18px */
  font-weight: 600;
}

/* Style paragraphs */
.blog p {
  font-size: 18px;
  line-height: 1.5; /* Improve readability with some line spacing */
}

/* Style strong tags */
.blog strong {
  font-weight: bold; /* Make text within strong tags bold */
}

/* Style italic tags */
.blog italic {
  font-style: italic; /* Make text within italic tags italic */
}

/* Style blockquotes */
.blog blockquote {
  border-left: 2px solid #888; /* Add a left border to blockquotes */
  padding-left: 15px; /* Add left padding for blockquotes */
  margin-left: 0; /* Reset default margin for blockquotes */
}

/* Style code */
.blog > p > code {
  font-family: monospace; /* Use a monospace font for code */
  font-size: 16px;
  background-color: var(--sky-300); /* Add a grey background color */
  padding: 2px 5px; /* Add some padding */
  border-radius: 4px; /* Add rounded corners */
}

/* Style table */
.blog table {
  text-align: left;
  border-collapse: collapse; /* Collapse borders */
  width: 100%; /* Make table as wide as possible */
  margin-bottom: 0.5rem; /* Add space below table */
}

/* Style table thead */
.blog thead {
  background-color: #333; /* Darken header row */
  color: #fff; /* Lighten header row text */
}

/* Style table tbody */
.blog tbody {
  background-color: #fff; /* Add a background color to all table rows */
}

/* Style table th */
.blog th {
  padding: 10px 15px; /* Add padding */
}

/* Style table td */
.blog td {
  border: 1px solid #ccc; /* Add borders */
  padding: 10px 15px; /* Add padding */
}

/* Style unordered list */
.blog ul {
  list-style: disc; /* Use disc bullets */
  margin-left: 1.5rem; /* Add some left margin */
}

/* Style ordered lists */
.blog ol {
  list-style: decimal; /* Use decimal numbers */
  margin-left: 1.5rem; /* Add some left margin */
}

/* Style list items */
.blog li {
  font-size: 18px;
  margin-bottom: 0.5rem;
}

/* Style abbr */
.blog abbr {
  text-decoration: none; /* Remove underline from abbreviations */
  border-bottom: 1px dotted #333; /* Add bottom border to abbreviations */
}

/* Style link */
.blog a {
  font-weight: 600;
  color: var(--green-900); /* Darken links */
  text-decoration: underline; /* Add underline */
  text-underline-offset: 2px;
}

/* Style links on hover */
.blog a:hover {
  color: var(--green-700); /* Lighten links on hover */
}

/* Code Block */

/* Style pre tags */
.blog pre {
  font-family: monospace; /* Use a monospace font for code */
  padding: 15px 15px 15px 15px; /* Add some padding */
  border-radius: 4px; /* Add rounded corners */
  margin-bottom: 1rem; /* Add space below pre tags */
}

.blog pre code {
  background-color: transparent; /* Remove background color from code */
  padding: 0; /* Remove padding from code */
  border-radius: 0; /* Remove border radius from code */
}

.copy-code {
  position: absolute;
  top: 10px;
  right: 0;
  background-color: #fff;
  color: var(--green-900);
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  line-height: 1rem;
  border-radius: 0.25rem 0 0 0.25rem;
}

.copy-code:hover {
  background-color: #fff;
}

.code-lang {
  position: absolute;
  top: 0;
  left: 10px;
  background-color: #fff;
  color: var(--green-900);
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  line-height: 1rem;
  border-radius: 0 0 0.25rem 0.25rem;
}

@supports (selector(:has(*))) {
  .blog pre:has(.code-lang) {
    padding-top: 30px;
  }
}

@supports not (selector(:has(*))) {
  .blog pre {
    padding: 30px 15px 15px 15px;
  }
}

@media screen and (max-width: 768px) {
  .blog ul {
    margin-left: 0;
  }
}

